7.6.1-FORK (12-09-2024)
- Bug fix: Correcting security issue regarding user search endpoint [#qubIT-Omnis-6849]

7.6.0-FORK (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]