@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.qubit.terra</groupId>
             <artifactId>qub-foundation-core-api</artifactId>
-            <version>7.5.0</version>
+            <version>7.10.0</version>
 	</dependency>
 	<dependency>
             <groupId>commons-io</groupId>
