@@ -1,3 +1,5 @@
+- Refactor: Adapts MenuItem to new MenuItem inteface in qub-foundation-core-api [#qubIT-Fenix-5888]
+
 7.6.1-FORK (12-09-2024)
 - Bug fix: Correcting security issue regarding user search endpoint [#qubIT-Omnis-6849]
 
